<resources>
    <string name="app_name">Teamder</string>
    <string name="login_message">Login to your account</string>
    <string name="email_input">Email</string>
    <string name="password_input">Password</string>
    <string name="social_distancing">social distancing</string>
    <string name="login_button">login button</string>
    <string name="password_title">Password</string>
    <string name="register_account">Register</string>
    <string name="register_message">Create your new account</string>
    <string name="email_title">Email</string>
    <string name="name_title">Your name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="notification">Notification</string>
    <string name="past_notifications">Past notifications</string>
    <string name="new_notifications">New notifications</string>
    <string name="no_notification">You don\'t have any notifications</string>
    <string name="no_message">You don\'t have any messages</string>
    <string name="top_background">top background</string>
    <string name="home_welcome">Hi</string>
    <string name="home_username" />
    <string name="logout_icon">logout icon</string>
    <string name="notification_icon">notification icon</string>
    <string name="new_notification"> (+1)</string>
    <string name="dashboard">Dashboard</string>
    <string name="teamee">Teamee</string>
    <string name="status">Status</string>
    <string name="group">Group</string>
    <string name="course">Course</string>
    <string name="name">Name</string>
    <string name="profile">Profile</string>
    <string name="explore">"Explore "</string>
    <string name="request_message">Leave a message</string>
    <string name="request_course">Course(s) request</string>
    <string name="request_message_hint">Say hi…</string>
    <string name="cancel">Cancel</string>
    <string name="send">Send</string>
    <string name="request_person">Name</string>
    <string name="message">message</string>
    <string name="timestamp">timestamp</string>
    <string name="review_note">Notes from requester</string>
    <string name="reject">Reject</string>
    <string name="requester">Requester</string>
    <string name="received_requests">Requests received</string>
    <string name="sent_requests">Requests sent</string>
    <string name="groups">Groups</string>
    <string name="courses">Courses</string>
    <string name="channel_name">notification_channel</string>
    <string name="channel_description">notification_description</string>
    <string name="course_request">Course</string>
    <string name="sID">sID</string>
    <string name="gpa">GPA</string>
    <string name="phone">Phone</string>
    <string name="major">Major</string>
    <string name="introduction">Introduction</string>
    <string name="enrolling_courses">Enrolling courses</string>
    <string name="comments">Comments</string>
    <string name="course_name">Enter course name:</string>
    <string name="reviews">Reviews</string>
    <string name="pass">Pass</string>
    <string name="feedback_form">Feedback form</string>
    <string name="feedback_hint">Leave your feedback here…</string>
    <string name="leave">Leave group</string>
    <string name="all_team_members">All team members</string>
    <string name="sign_up">Sign Up</string>
    <string name="request">Request</string>
    <string name="input_your_message_here">Input your message here...</string>
    <string name="upload_photo">Upload photo</string>
</resources>