<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_img"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".activity.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/activity_login"
        android:gravity="center_horizontal"
        android:paddingStart="35dp"
        android:paddingEnd="35dp"
        android:paddingTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="40dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:contentDescription="@string/social_distancing"
                app:srcCompat="@drawable/ic_teamder" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/app_name"
                android:textColor="@color/blue_900"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_light"
                android:text="@string/login_message"
                android:textColor="#546E7A"
                android:textSize="12sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    tools:ignore="NestedWeights">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_light"
                        android:paddingStart="20dp"
                        android:text="@string/email_title"
                        android:textColor="@color/blue_900_70"
                        android:textSize="12sp"
                        tools:ignore="RtlSymmetry" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/shape_input"
                        android:fontFamily="@font/poppins_regular"
                        android:gravity="center_vertical"
                        android:hint="@string/email_input"
                        android:importantForAutofill="no"
                        android:inputType="textEmailAddress"
                        android:paddingStart="20dp"
                        android:textColor="@color/blue_900"
                        android:textColorHint="@drawable/text_input_selector"
                        android:textSize="14sp"
                        tools:ignore="RtlSymmetry,TextFields,DuplicateSpeakableTextCheck" />
                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_light"
                        android:paddingStart="20dp"
                        android:text="@string/password_title"
                        android:textColor="@color/blue_900_70"
                        android:textSize="12sp"
                        tools:ignore="RtlSymmetry" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/shape_input"
                        android:fontFamily="@font/poppins_regular"
                        android:gravity="center_vertical"
                        android:hint="@string/password_input"
                        android:importantForAutofill="no"
                        android:inputType="textPassword"
                        android:paddingStart="20dp"
                        android:textColor="@color/blue_900"
                        android:textColorHint="@drawable/text_input_selector"
                        android:textSize="14sp"
                        tools:ignore="RtlSymmetry,DuplicateSpeakableTextCheck" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="bottom|center"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/logout_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/blue_grey_050"
                    android:contentDescription="@string/login_button"
                    app:srcCompat="@drawable/login_btn"
                    tools:ignore="SpeakableTextPresentCheck,RedundantDescriptionCheck,DuplicateSpeakableTextCheck" />

                <ImageButton
                    android:id="@+id/sign_up_link"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/blue_grey_050"
                    android:contentDescription="@string/login_button"
                    android:minHeight="48dp"
                    app:srcCompat="@drawable/sign_up_link"
                    tools:ignore="SpeakableTextPresentCheck,RedundantDescriptionCheck,ImageContrastCheck" />
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>