<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_img"
    tools:context=".activity.HomeActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:contentDescription="@string/top_background"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.47000003"
                    app:srcCompat="@drawable/ic_top"
                    tools:ignore="ImageContrastCheck" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.8">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@android:color/transparent"
                        android:fontFamily="@font/poppins_semibold"
                        android:gravity="center"
                        android:text="@string/home_welcome"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/name"
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@android:color/transparent"
                        android:fontFamily="@font/poppins_semibold"
                        android:text="@string/home_username"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <ImageButton
                        android:id="@+id/logout_btn"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:backgroundTint="@android:color/transparent"
                        android:contentDescription="@string/logout_icon"
                        android:minWidth="48dp"
                        app:srcCompat="@drawable/ic_log_out"
                        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
                </LinearLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                >

                <ImageButton
                    android:id="@+id/create_site_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/explore"
                    android:minHeight="48dp"
                    app:srcCompat="@drawable/ic_explore"
                    tools:ignore="SpeakableTextPresentCheck" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/notification_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/notification_icon"
                        android:minHeight="48dp"
                        app:srcCompat="@drawable/notification_button"
                        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

                    <TextView
                        android:id="@+id/new_notification_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/new_notification"
                        android:textColor="@color/yellow_vivid_600"
                        android:textSize="12sp"
                        android:visibility="gone" />
                </LinearLayout>

                <ImageButton
                    android:id="@+id/logout_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/profile"
                    android:minHeight="48dp"
                    app:srcCompat="@drawable/ic_profile"
                    tools:ignore="SpeakableTextPresentCheck" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                >

                <TextView
                    android:id="@+id/all_sites"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_light"
                    android:text="@string/dashboard"
                    android:textColor="@color/blue_700"
                    android:textSize="14sp"
                    android:layout_marginTop="22dp"
                    tools:ignore="TextContrastCheck" />

                <LinearLayout
                    android:id="@+id/sites_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="50dp"
                    android:background="@drawable/white_list"
                    android:orientation="vertical"
                    android:padding="15dp">
                </LinearLayout>
            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>