<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_img"
    tools:context=".activity.NotificationActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/notification"
                android:textColor="@color/blue_900"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/no_notification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_light"
                android:visibility="gone"
                android:text="@string/no_notification"
                android:textColor="@color/blue_900"
                android:textSize="16sp" />

            <LinearLayout
                android:id="@+id/new_notification_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/poppins_light"
                    android:text="@string/new_notifications"
                    android:textColor="@color/blue_900"
                    android:textSize="16sp" />

                <LinearLayout
                    android:id="@+id/new_notification_list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10sp"
                    android:orientation="vertical" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/past_notification_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/poppins_light"
                    android:text="@string/past_notifications"
                    android:textColor="@color/blue_900"
                    android:textSize="16sp" />

                <LinearLayout
                    android:id="@+id/past_notification_list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>