<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RequestActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="SpeakableTextPresentCheck">

        <LinearLayout
            android:id="@+id/full_screen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="700dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="30dp"
                android:paddingTop="30dp"
                android:paddingEnd="30dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="30dp"
                        android:layout_marginEnd="10dp"
                        app:cardPreventCornerOverlap="false">

                        <ImageView
                            android:id="@+id/avatar"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:src="@drawable/ic_avatar"
                            tools:ignore="ContentDescription" />

                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:id="@+id/name"
                        android:gravity="center_vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/poppins_bold"
                        android:text="@string/request_person"
                        android:textColor="@color/blue_900"
                        android:textSize="18sp" />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/request_message"
                    android:textColor="@color/blue_900_70" />

                <EditText
                    android:id="@+id/message"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginBottom="30dp"
                    android:background="@drawable/white_list"
                    android:fontFamily="@font/poppins_regular"
                    android:gravity="top|start"
                    android:hint="@string/request_message_hint"
                    android:importantForAutofill="no"
                    android:inputType="textMultiLine"
                    android:padding="20dp"
                    android:textColor="@color/blue_900"
                    android:textSize="14sp"
                    tools:ignore="RtlSymmetry,TextFields,DuplicateSpeakableTextCheck" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/request_course"
                    android:textColor="@color/blue_900_70" />

                <LinearLayout
                    android:id="@+id/courses_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:orientation="vertical">

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="bottom|center"
                android:orientation="horizontal"
                android:paddingStart="30dp"
                android:visibility="gone"
                android:id="@+id/actions"
                android:paddingTop="30dp"
                android:paddingEnd="30dp"
                tools:ignore="NestedWeights">

                <Button
                    android:id="@+id/cancel_button"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:backgroundTint="@android:color/transparent"
                    android:contentDescription="@string/cancel"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/cancel"
                    android:textAllCaps="false"
                    android:textColor="#546E7A"
                    android:textSize="12sp"
                    tools:ignore="NestedWeights" />

                <Button
                    android:id="@+id/send_button"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="@drawable/blue_round_item"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/send"
                    android:textAllCaps="false"
                    android:textSize="12sp" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>